update to 15 and some ui fix

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Showcase | Spotify Way Out West Hackathon 2014</title>
+    <title>Showcase | Spotify Hack Out West 2015</title>
     <link rel="icon" href="/images/favicon.png" />
     <link href='http://fonts.googleapis.com/css?family=Pacifico|Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="/css/site.css" />
@@ -13,15 +13,15 @@
       <div class="grid grid--middle">
         <div class="grid__item one-quarter">
           <a target="_blank" title="Spotify" href="http://spotify.com">
-            <img src="/images/spotify.svg" alt="Spotify" width="127" />
+            <img src="/images/spotify.svg" alt="Spotify" width="167" />
           </a>
         </div><!--
         --><div class="grid__item one-half">
           <h1 class="scale">Showcase</h1>
         </div><!--
         --><div class="grid__item one-quarter">
-          <a target="_blank" title="#wowhack2014" href="https://twitter.com/search?q=%23wowhack2014">
-            <img src="/images/wowhack.svg" alt="#wowhack2014" width="185" />
+          <a target="_blank" title="#hackoutwest" href="https://twitter.com/search?q=%23hackoutwest">
+            <img src="/images/hackoutwest.svg" alt="#hackoutwest" width="185" />
           </a>
         </div>
       </div>
@@ -35,10 +35,13 @@
 
     <footer role="contentinfo">
       <p>
+        Updated and tweaked with love by Josefin, Spotify Street Team 2015
+      </p>
+      <p>
         Site made with love by Johan &amp; Anton, Spotify Street Team 2014
       </p>
       <p>
-        Source on <a href="https://github.com/wowhack/showcase">github.com/wowhack/showcase</a>. Hosted on Heroku.
+        Source on <a href="https://github.com/hackoutwest15/showcase">github.com/hackoutwest15/showcase</a>. Hosted on Heroku.
       </p>
     </footer>
   </body>
