--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,15 +12,15 @@
     <header role="banner">
       <div class="grid grid--middle">
         <div class="grid__item one-quarter">
-          <a target="_blank" title="Spotify" href="http://spotify.com">
+          <a target="_blank" title="Spotify" href="https://www.facebook.com/spotifyjobs?fref=ts">
             <img src="/images/spotify.svg" alt="Spotify" width="167" />
           </a>
         </div><!--
-        --><div class="grid__item one-half">
-          <h1 class="scale">Showcase</h1>
+      --><div class="grid__item one-half">
+          <img class="scale" style="padding-top:100px" src="/images/showcase-site-header.png" alt="Showcase" width="900" />        
         </div><!--
         --><div class="grid__item one-quarter">
-          <a target="_blank" title="#hackoutwest" href="https://twitter.com/search?q=%23hackoutwest">
+          <a target="_blank" title="#hackoutwest" href="https://tagboard.com/hackoutwest/search">
             <img src="/images/hackoutwest.svg" alt="#hackoutwest" width="185" />
           </a>
         </div>
