changed winners.json and changed organization ID and name to be configured to correct github account and organization

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Showcase | Spotify Hack Out West 2015</title>
     <link rel="icon" href="/images/favicon.png" />
-    <link href='http://fonts.googleapis.com/css?family=Pacifico|Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Pacifico|Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="/css/site.css" />
   </head>
   <body>
@@ -17,7 +17,7 @@
           </a>
         </div><!--
       --><div class="grid__item one-half">
-          <img class="scale" style="padding-top:100px" src="/images/showcase-site-header.png" alt="Showcase" width="900" />        
+          <img class="scale" style="padding-top:100px" src="/images/showcase-site-header.png" alt="Showcase" width="900" />
         </div><!--
         --><div class="grid__item one-quarter">
           <a target="_blank" title="#hackoutwest" href="https://tagboard.com/hackoutwest/search">
