added new pictures, header and small header to the right

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,11 +17,11 @@
           </a>
         </div><!--
       --><div class="grid__item one-half">
-          <img class="scale" style="padding-top:100px" src="/images/showcase-site-header.png" alt="Showcase" width="900" />
+          <img class="scale" style="padding-top:100px" src="/images/showcase-site-header.jpg" alt="Showcase" width="900" />
         </div><!--
         --><div class="grid__item one-quarter">
           <a target="_blank" title="#hackoutwest" href="https://tagboard.com/hackoutwest/search">
-            <img src="/images/hackoutwest.svg" alt="#hackoutwest" width="185" />
+            <img src="/images/hackoutwest.png" alt="#hackoutwest" width="185" />
           </a>
         </div>
       </div>
