--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,13 +35,15 @@
 
     <footer role="contentinfo">
       <p>
-        Updated and tweaked with love by Josefin, Spotify Street Team 2015
-      </p>
-      <p>
         Site made with love by Johan &amp; Anton, Spotify Street Team 2014
       </p>
       <p>
-        Source on <a href="https://github.com/hackoutwest15/showcase">github.com/hackoutwest15/showcase</a>. Hosted on Heroku.
+        Updated and tweaked with love by Josefin, Spotify Street Team 2015
+      </p>
+      <p>
+        And once again, updated and tweaked with love by Tomas &amp; Hanna, Spotify Street Team 2016
+      <p>
+        Source on <a href="https://github.com/hackoutwest2016/showcase">github.com/hackoutwest2016/showcase</a>. Hosted on Heroku.
       </p>
     </footer>
   </body>
