--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,8 @@
           <a target="_blank" title="Spotify" href="https://www.facebook.com/spotifyjobs?fref=ts">
             <img src="/images/spotify.svg" alt="Spotify" width="167" />
           </a>
-        </div><!--
-      --><div class="grid__item one-half">
+        </div>
+        <div class="grid__item one-half">
           <img class="scale" style="padding-top:100px" src="/images/showcase-site-header.jpg" alt="Showcase" width="900" />
         </div><!--
         --><div class="grid__item one-quarter">
